[package]
name = "egui-gdl"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
description = "Draw graphs with egui."
license = "MIT OR Apache-2.0"

[dependencies]
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
layout-rs = "0.1"
petgraph = { version = "0.6", features = ["serde-1"] }
rand = "0.8"
tracing = "0.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
instant = "0.1"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
